reading order fixed as part of exercise 2 #3

--- a/src/login.html
+++ b/src/login.html
@@ -121,10 +121,10 @@
 
     <main class="container main" id="main" role="main">
         <div class="row no-gutters">
-            <div class="col-12 col-md-5 mt-4 login" aria-label="Login">
+            <section class="col-12 col-md-5 mt-4 login" aria-label="Login">
                 <div class="p-4 mr-md-3 bg-white">
-                    <div class="text-primary mb-4 title">Login</div>
-                    <div class="text-danger mb-4 d-none subtitle" id="login-error">Please correct the error(s)</div>
+                    <h1 class="text-primary mb-4 title">Login</h1>
+                    <h2 class="text-danger mb-4 d-none subtitle" id="login-error">Please correct the error(s)</h2>
                     <ul class="sr-only" id="login-error-list"></ul>
                     <form id="login-form" novalidate>
                         <div class="form-group">
@@ -147,12 +147,12 @@
                         <button class="btn btn-link text-danger ml-3" id="login-forgot-button" type="button">Forgot password</button>
                     </form>
                 </div>
-            </div>
+            </section>
 
-            <div class="col-12 col-md-7 mt-4 register" aria-label="Create new account">
+            <section class="col-12 col-md-7 mt-4 register" aria-label="Create new account">
                 <div class="p-4 bg-white">
-                    <div class="text-primary mb-4 title">Create new account</div>
-                    <div class="text-danger mb-4 d-none subtitle" id="register-error">Please correct the error(s)</div>
+                    <h1 class="text-primary mb-4 title">Create new account</h1>
+                    <h2 class="text-danger mb-4 d-none subtitle" id="register-error">Please correct the error(s)</h2>
                     <ul class="sr-only" id="register-error-list"></ul>
                     <form id="register-form" novalidate>
                         <div class="form-group">
@@ -220,7 +220,7 @@
                         <button class="btn btn-primary" id="register-register-button">Register</button>
                     </form>
                 </div>
-            </div>
+            </section>
         </div>
     </main>
 
