--- a/src/article.html
+++ b/src/article.html
@@ -1,133 +1,251 @@
 <!DOCTYPE html>
 <html lang="en" id="root">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Lorem Ipsum Institute of Technolgoy</title>
-    <link href="./css/bootstrap.css" rel="stylesheet">
-    <link href="./css/common.css" rel="stylesheet">
-    <link href="./css/article.css" rel="stylesheet">
-</head>
+    <link href="./css/bootstrap.css" rel="stylesheet" />
+    <link href="./css/common.css" rel="stylesheet" />
+    <link href="./css/article.css" rel="stylesheet" />
+  </head>
 
-<body class="d-flex flex-column bg-light">
+  <body class="d-flex flex-column bg-light">
     <header class="container-fluid d-none d-lg-block my-4 header" role="banner">
-        <div class="container">
-            <div class="row no-gutters">
-                <div class="col-8 media">
-                    <img class="align-self-center mr-3 rounded-right logo" src="./img/logo.jpg">
-                    <div class="media-body align-self-center">
-                        <div class="mb-0 title">Lorem Ipsum
-                            <br>Institute of Technology
-                        </div>
-                    </div>
-                </div>
-                <div class="col-4">
-                    <div class="btn-toolbar justify-content-end">
-                        <div class="btn-group btn-group-sm">
-                            <button class="btn btn-dark font-increase-button" id="font-increase-button" aria-label="Increase font size">A+</button>
-                            <button class="btn btn-dark font-decrease-button" id="font-decrease-button" aria-label="Decrease font size">A-</button>
-                        </div>
-                    </div>
-                </div>
+      <div class="container">
+        <div class="row no-gutters">
+          <div class="col-8 media">
+            <img
+              class="align-self-center mr-3 rounded-right logo"
+              src="./img/logo.jpg"
+            />
+            <div class="media-body align-self-center">
+              <div class="mb-0 title">
+                Lorem Ipsum <br />Institute of Technology
+              </div>
             </div>
+          </div>
+          <div class="col-4">
+            <div class="btn-toolbar justify-content-end">
+              <div class="btn-group btn-group-sm">
+                <button
+                  class="btn btn-dark font-increase-button"
+                  id="font-increase-button"
+                  aria-label="Increase font size"
+                >
+                  A+
+                </button>
+                <button
+                  class="btn btn-dark font-decrease-button"
+                  id="font-decrease-button"
+                  aria-label="Decrease font size"
+                >
+                  A-
+                </button>
+              </div>
+            </div>
+          </div>
         </div>
+      </div>
     </header>
 
     <nav class="container-fluid bg-dark nav" role="navigation">
-        <div class="container">
-            <div class="navbar navbar-dark bg-dark navbar-expand-lg px-0">
-                <div class="navbar-brand d-lg-none">
-                    <img class="rounded-right" src="./img/logo.jpg" width="40" height="40">
+      <div class="container">
+        <div class="navbar navbar-dark bg-dark navbar-expand-lg px-0">
+          <div class="navbar-brand d-lg-none">
+            <img
+              class="rounded-right"
+              src="./img/logo.jpg"
+              width="40"
+              height="40"
+            />
+          </div>
+          <button class="navbar-toggler" type="button">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="nav-bar-content">
+            <div class="navbar-nav mr-auto">
+              <div class="nav-item">
+                <a class="nav-link" href="./" role="button">Homepage</a>
+              </div>
+              <div class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  id="nav-bar-faculties"
+                  role="button"
+                  >Faculties</a
+                >
+                <div class="dropdown-menu">
+                  <div>
+                    <a
+                      class="dropdown-item"
+                      href="./empty.html?title=Applied+sciences"
+                      role="button"
+                      >Applied sciences</a
+                    >
+                  </div>
+                  <div>
+                    <a
+                      class="dropdown-item"
+                      href="./empty.html?title=Architecture+%26+planning"
+                      role="button"
+                      >Architecture &amp; planning</a
+                    >
+                  </div>
+                  <div>
+                    <a
+                      class="dropdown-item"
+                      href="./empty.html?title=Construction+%26+environment"
+                      role="button"
+                      >Construction &amp; environment</a
+                    >
+                  </div>
+                  <div>
+                    <a
+                      class="dropdown-item"
+                      href="./empty.html?title=Engineering"
+                      role="button"
+                      >Engineering</a
+                    >
+                  </div>
+                  <div>
+                    <a
+                      class="dropdown-item"
+                      href="./empty.html?title=Health+%26+social+sciences"
+                      role="button"
+                      >Health &amp; social sciences</a
+                    >
+                  </div>
                 </div>
-                <button class="navbar-toggler" type="button">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="nav-bar-content">
-                    <div class="navbar-nav mr-auto">
-                        <div class="nav-item">
-                            <a class="nav-link" href="./" role="button">Homepage</a>
-                        </div>
-                        <div class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-faculties" role="button">Faculties</a>
-                            <div class="dropdown-menu">
-                                <div>
-                                    <a class="dropdown-item" href="./empty.html?title=Applied+sciences" role="button">Applied sciences</a>
-                                </div>
-                                <div>
-                                    <a class="dropdown-item" href="./empty.html?title=Architecture+%26+planning" role="button">Architecture &amp; planning</a>
-                                </div>
-                                <div>
-                                    <a class="dropdown-item" href="./empty.html?title=Construction+%26+environment" role="button">Construction &amp; environment</a>
-                                </div>
-                                <div>
-                                    <a class="dropdown-item" href="./empty.html?title=Engineering" role="button">Engineering</a>
-                                </div>
-                                <div>
-                                    <a class="dropdown-item" href="./empty.html?title=Health+%26+social+sciences" role="button">Health &amp; social sciences</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-education" role="button">Education &amp; research</a>
-                            <div class="dropdown-menu">
-                                <div>
-                                    <a class="dropdown-item" href="./empty.html?title=Bachelor" role="button">Bachelor</a>
-                                </div>
-                                <div>
-                                    <a class="dropdown-item" href="./empty.html?title=Master" role="button">Master</a>
-                                </div>
-                                <div>
-                                    <a class="dropdown-item" href="./empty.html?title=Continuing+education" role="button">Continuing education</a>
-                                </div>
-                                <div>
-                                    <a class="dropdown-item" href="./empty.html?title=Doctorate" role="button">Doctorate</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-industry" role="button">Industry &amp; partners</a>
-                            <div class="dropdown-menu">
-                                <div>
-                                    <a class="dropdown-item" href="./empty.html?title=Public+relations" role="button">Public relations</a>
-                                </div>
-                                <div>
-                                    <a class="dropdown-item" href="./empty.html?title=Commercialization" role="button">Commercialization</a>
-                                </div>
-                                <div>
-                                    <a class="dropdown-item" href="./empty.html?title=Sponsors+%26+partners" role="button">Sponsors &amp; partners</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="navbar-nav">
-                        <div class="nav-item">
-                            <a class="nav-link" href="./login.html" role="button">Login</a>
-                        </div>
-                    </div>
+              </div>
+              <div class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  id="nav-bar-education"
+                  role="button"
+                  >Education &amp; research</a
+                >
+                <div class="dropdown-menu">
+                  <div>
+                    <a
+                      class="dropdown-item"
+                      href="./empty.html?title=Bachelor"
+                      role="button"
+                      >Bachelor</a
+                    >
+                  </div>
+                  <div>
+                    <a
+                      class="dropdown-item"
+                      href="./empty.html?title=Master"
+                      role="button"
+                      >Master</a
+                    >
+                  </div>
+                  <div>
+                    <a
+                      class="dropdown-item"
+                      href="./empty.html?title=Continuing+education"
+                      role="button"
+                      >Continuing education</a
+                    >
+                  </div>
+                  <div>
+                    <a
+                      class="dropdown-item"
+                      href="./empty.html?title=Doctorate"
+                      role="button"
+                      >Doctorate</a
+                    >
+                  </div>
                 </div>
+              </div>
+              <div class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  id="nav-bar-industry"
+                  role="button"
+                  >Industry &amp; partners</a
+                >
+                <div class="dropdown-menu">
+                  <div>
+                    <a
+                      class="dropdown-item"
+                      href="./empty.html?title=Public+relations"
+                      role="button"
+                      >Public relations</a
+                    >
+                  </div>
+                  <div>
+                    <a
+                      class="dropdown-item"
+                      href="./empty.html?title=Commercialization"
+                      role="button"
+                      >Commercialization</a
+                    >
+                  </div>
+                  <div>
+                    <a
+                      class="dropdown-item"
+                      href="./empty.html?title=Sponsors+%26+partners"
+                      role="button"
+                      >Sponsors &amp; partners</a
+                    >
+                  </div>
+                </div>
+              </div>
             </div>
-            <div class="d-lg-none">
-                <div class="btn-toolbar justify-content-end">
-                    <div class="btn-group btn-group-sm">
-                        <button class="btn btn-dark text-white font-increase-button" id="font-increase-button-1" aria-label="Increase font size">A+</button>
-                        <button class="btn btn-dark text-white font-decrease-button" id="font-decrease-button-1" aria-label="Decrease font size">A-</button>
-                    </div>
-                </div>
+            <div class="navbar-nav">
+              <div class="nav-item">
+                <a class="nav-link" href="./login.html" role="button">Login</a>
+              </div>
             </div>
+          </div>
         </div>
+        <div class="d-lg-none">
+          <div class="btn-toolbar justify-content-end">
+            <div class="btn-group btn-group-sm">
+              <button
+                class="btn btn-dark text-white font-increase-button"
+                id="font-increase-button-1"
+                aria-label="Increase font size"
+              >
+                A+
+              </button>
+              <button
+                class="btn btn-dark text-white font-decrease-button"
+                id="font-decrease-button-1"
+                aria-label="Decrease font size"
+              >
+                A-
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
     </nav>
 
     <main class="container mt-4 main" id="main" role="main">
-        <div class="p-5 bg-white">
-            <div class="text-primary text-center mb-4 title">Global temperature record shows 2016 as the warmest year on record</div>
-            <div class="text-center wrapper">
-                <img src="./img/temperature.jpg" class="figure-img img-fluid">
-                <p class="figure-caption text-center px-5">The graphic shows the global mean surface temperature change since 1880 till nowadays. The grey curve indicates
-                    the annual average temperature and the black curve shows the smoothed result. Over the last two centuries,
-                    the mean tempurature has increased by around 1 degree Celcius.</p>
-            </div>
+      <div class="p-5 bg-white">
+        <div class="text-primary text-center mb-4 title">
+          Global temperature record shows 2016 as the warmest year on record
+        </div>
+        <div class="text-center wrapper">
+          <img src="./img/temperature.jpg" class="figure-img img-fluid" />
+          <p class="figure-caption text-center px-5">
+            The graphic shows the global mean surface temperature change since
+            1880 till nowadays. The grey curve indicates the annual average
+            temperature and the black curve shows the smoothed result. Over the
+            last two centuries, the mean tempurature has increased by around 1
+            degree Celcius.
+          </p>
+        </div>
             <p>The global temperature record shows the fluctuations of the temperature of the atmosphere and the oceans through
                 various spans of time. The recently data published by NASA is one of the most detailed information exists
                 since 1850, when methodical thermometer-based records began.
@@ -195,22 +313,50 @@
     </main>
 
     <footer class="container-fluid bg-dark mt-4 footer" role="contentinfo">
-        <div class="container text-center py-3">
-            <div class="row justify-content-around">
-                <a class="col-12 col-md mr-3 text-white" href="./empty.html?title=About" role="button">About</a>
-                <a class="col-12 col-md mr-3 text-white" href="./empty.html?title=Contact+us" role="button">Contact us</a>
-                <a class="col-12 col-md mr-3 text-white" href="./empty.html?title=Help" role="button">Help</a>
-                <a class="col-12 col-md mr-3 text-white" href="./empty.html?title=Terms+of+services" role="button">Terms of service</a>
-                <a class="col-12 col-md mr-3 text-white" href="./empty.html?title=Privacy+policy" role="button">Privacy policy</a>
-            </div>
+      <div class="container text-center py-3">
+        <div class="row justify-content-around">
+          <a
+            class="col-12 col-md mr-3 text-white"
+            href="./empty.html?title=About"
+            role="button"
+            >About</a
+          >
+          <a
+            class="col-12 col-md mr-3 text-white"
+            href="./empty.html?title=Contact+us"
+            role="button"
+            >Contact us</a
+          >
+          <a
+            class="col-12 col-md mr-3 text-white"
+            href="./empty.html?title=Help"
+            role="button"
+            >Help</a
+          >
+          <a
+            class="col-12 col-md mr-3 text-white"
+            href="./empty.html?title=Terms+of+services"
+            role="button"
+            >Terms of service</a
+          >
+          <a
+            class="col-12 col-md mr-3 text-white"
+            href="./empty.html?title=Privacy+policy"
+            role="button"
+            >Privacy policy</a
+          >
         </div>
+      </div>
     </footer>
-    
+
     <script type="text/javascript" src="./js/jquery.js"></script>
     <script type="text/javascript" src="./js/popper.js"></script>
     <script type="text/javascript" src="./js/bootstrap.js"></script>
     <script type="text/javascript" src="./js/common.js"></script>
     <script type="text/javascript" src="./js/article.js"></script>
 </body>
+</body>
+
+  </body>
 
 </html>
