#7 makes table in src/article.html accessible

--- a/src/article.html
+++ b/src/article.html
@@ -254,23 +254,26 @@
                 The year 2016 ranks as the warmest on record.</p>
             <div class="table-responsive mt-4 wrapper">
                 <table class="table text-center">
+                    <caption>
+                        <p>Average Global Temperature by Century and Year</p>
+                    </caption>
                     <col>
                     <col>
                     <colgroup span="2"></colgroup>
-                    <tbody class="thead-dark">
+                    <thead>
                         <tr>
-                            <td class="align-middle" rowspan="2">Century</td>
-                            <td class="align-middle" rowspan="2">Year</td>
-                            <td class="align-middle" colspan="2">Temperature</td>
+                            <th class="align-middle" scope="colgroup" rowspan="2">Century</th>
+                            <th class="align-middle" scope="colgroup" rowspan="2">Year</th>
+                            <th class="align-middle" scope="colgroup" colspan="2">Temperature</th>
                         </tr>
                         <tr>
-                            <td class="align-middle">Average</td>
-                            <td class="align-middle">Smoothed</td>
+                            <th class="align-middle" scope="col">Average</th>
+                            <th class="align-middle" scope="col">Smoothed</th>
                         </tr>
-                    </tbody>
+                    </thead>
                     <tbody>
                         <tr>
-                            <td class="align-middle" rowspan="2">19th century</td>
+                            <th class="align-middle" scope="rowgroup" rowspan="2">19th century</th>
                             <td>1880</td>
                             <td>-0.20</td>
                             <td>-0.13</td>
@@ -283,7 +286,7 @@
                     </tbody>
                     <tbody>
                         <tr>
-                            <td class="align-middle" rowspan="2">20th century</td>
+                            <th class="align-middle" scope="rowgroup" rowspan="2">20th century</th>
                             <td>1920</td>
                             <td>-0.27</td>
                             <td>-0.26</td>
@@ -296,7 +299,7 @@
                     </tbody>
                     <tbody>
                         <tr>
-                            <td class="align-middle" rowspan="2">21st century</td>
+                            <th class="align-middle" scope="rowgroup" rowspan="2">21st century</th>
                             <td>2000</td>
                             <td>0.42</td>
                             <td>0.52</td>
