--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,11 @@
               height="40"
             />
           </div>
-          <button class="navbar-toggler" type="button">
+          <button
+            class="navbar-toggler"
+            aria-label="collapse navbar"
+            type="button"
+          >
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="nav-bar-content">
