#4: set aria-expanded attribute on dropdown-toggles and implement dynamic updates.

--- a/src/index.html
+++ b/src/index.html
@@ -76,6 +76,7 @@
                   class="nav-link dropdown-toggle"
                   href="#"
                   aria-haspopup="true"
+                  aria-expanded="false"
                   id="nav-bar-faculties"
                   role="button"
                   >Faculties</a
@@ -128,6 +129,7 @@
                   class="nav-link dropdown-toggle"
                   href="#"
                   aria-haspopup="true"
+                  aria-expanded="false"
                   id="nav-bar-education"
                   role="button"
                   >Education &amp; research</a
@@ -172,6 +174,7 @@
                   class="nav-link dropdown-toggle"
                   href="#"
                   aria-haspopup="true"
+                  aria-expanded="false"
                   id="nav-bar-industry"
                   role="button"
                   >Industry &amp; partners</a
